--- a/pom.xml
+++ b/pom.xml
@@ -10,7 +10,7 @@
     </parent>
     <groupId>com.testein</groupId>
     <artifactId>testein</artifactId>
-    <version>1.1-SNAPSHOT</version>
+    <version>1.2-SNAPSHOT</version>
     <packaging>hpi</packaging>
 
     <build>
@@ -38,7 +38,7 @@
     </properties>
 
     <name>Testein</name>
-    <description>Testein plugin for running test/application/test suit and uploading custom test steps</description>
+    <description>Testein plugin for running tests/projects/test suits and uploading custom test steps</description>
     <url>http://testein.com</url>
 
     <!-- The default licence for Jenkins OSS Plugins is MIT. Substitute for the applicable one if needed. -->
